kubernetes/apps/kube-system/cilium/policies/allow-envoy-backends.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Allow envoy proxies to reach backend pods across all namespaces
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-envoy-backends
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: envoy-admin
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
      toPorts:
        - ports:
            # http
            - port: "80"
              protocol: TCP
            # https
            - port: "443"
              protocol: TCP
            # http alternate
            - port: "8080"
              protocol: TCP
            # https alternate
            - port: "8443"
              protocol: TCP
            # longhorn
            - port: "8000"
              protocol: TCP
            # authentik
            - port: "9000"
              protocol: TCP
            - port: "9443"
              protocol: TCP
            # prometheus
            - port: "9090"
              protocol: TCP
            # grafana
            - port: "3000"
              protocol: TCP
            # radarr
            - port: "7878"
              protocol: TCP
            # sonarr
            - port: "8989"
              protocol: TCP
            # prowlarr
            - port: "9696"
              protocol: TCP
            # bazarr
            - port: "6767"
              protocol: TCP
            # jellyfin
            - port: "8096"
              protocol: TCP
            # jellyseerr
            - port: "5055"
              protocol: TCP
            # dispatcharr
            - port: "9191"
              protocol: TCP
            # tdarr
            - port: "8265"
              protocol: TCP
            # gitlab webservice (workhorse)
            - port: "8181"
              protocol: TCP
            # home-assistant
            - port: "8123"
              protocol: TCP
            # maigret
            - port: "5000"
              protocol: TCP
            # social-analyzer
            - port: "9005"
              protocol: TCP
